Added prototype load PDF from base64 data suport

--- a/viewer.html
+++ b/viewer.html
@@ -36,8 +36,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 <link rel="resource" type="application/l10n" href="locale/locale.properties">
 <script src="./build/pdf.js"></script>
 
-
-    <script src="viewer.js"></script>
+    <script src="cviewer.js"></script>
 
   </head>
 
