--- a/viewer.html
+++ b/viewer.html
@@ -36,7 +36,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 <link rel="resource" type="application/l10n" href="locale/locale.properties">
 <script src="./build/pdf.js"></script>
 
-    <script src="cviewer.js"></script>
+    <script src="dviewer.js"></script>
 
   </head>
 
